# structures_lab_3

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.c  test_runner.py
.github/workflows/: cmake-multi-platform.yml
